[gd_scene load_steps=57 format=3 uid="uid://drhqjfxycqi5p"]

[ext_resource type="Script" uid="uid://b2s8i286ohrbt" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="Texture2D" uid="uid://m5fuhmge1kqg" path="res://assets/image/bg.png" id="2_iywne"]
[ext_resource type="Texture2D" uid="uid://cx0uf4t0p61gx" path="res://assets/image/machine.png" id="3_p57ef"]
[ext_resource type="PackedScene" uid="uid://c4igxeib85c7n" path="res://scenes/button.tscn" id="4_u5sy4"]
[ext_resource type="Texture2D" uid="uid://bgehs7ks1af6b" path="res://assets/image/joystick.png" id="5_gee14"]
[ext_resource type="Shader" uid="uid://e5ywd8n633ma" path="res://scenes/screen_fx.gdshader" id="6_gee14"]
[ext_resource type="Texture2D" uid="uid://lis3lsu6figr" path="res://assets/image/sign-ss.png" id="6_p57ef"]
[ext_resource type="AudioStream" uid="uid://bxr882cv6rqst" path="res://assets/sound/button_press.wav" id="6_rysoc"]
[ext_resource type="AudioStream" uid="uid://r1st1kjgt711" path="res://assets/sound/joystick-hit.wav" id="7_ssvqc"]
[ext_resource type="FontFile" uid="uid://c3ke05r37irw7" path="res://assets/font/m3x6.ttf" id="8_0tnpc"]
[ext_resource type="AudioStream" uid="uid://dub7ylproafx0" path="res://assets/sound/room-noise.wav" id="8_264po"]
[ext_resource type="AudioStream" uid="uid://4duihjx5ts7d" path="res://assets/sound/coin-pwing.wav" id="8_ssvqc"]
[ext_resource type="Texture2D" uid="uid://cufye1igvsxl4" path="res://assets/image/arrow.png" id="8_vtaks"]
[ext_resource type="PackedScene" uid="uid://dgr6j6ylwvpay" path="res://scenes/coin.tscn" id="9_0tnpc"]
[ext_resource type="AudioStream" uid="uid://dm5vgtasl6h6" path="res://assets/sound/short-chiptune-loop.wav" id="9_1kice"]
[ext_resource type="AudioStream" uid="uid://kpakhsbd6g03" path="res://assets/sound/victory_theme.mp3" id="10_5newe"]
[ext_resource type="AudioStream" uid="uid://bnte1slhnbu" path="res://assets/sound/arcade_ambience.mp3" id="11_37s47"]
[ext_resource type="AudioStream" uid="uid://dwhq07sahi282" path="res://assets/sound/arcade-pickup.wav" id="12_bt5mj"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0tnpc"]
size = Vector2(4, 4)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0tnpc"]

[sub_resource type="LabelSettings" id="LabelSettings_0tnpc"]
paragraph_spacing = -7.31
font = ExtResource("8_0tnpc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vtaks"]
shader = ExtResource("6_gee14")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.0
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.0
shader_parameter/resolution = Vector2(80, 45)
shader_parameter/pixelate = false
shader_parameter/roll = false
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.0
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.0
shader_parameter/aberration = 4.75e-08
shader_parameter/brightness = 0.855
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.27
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.23
shader_parameter/vignette_opacity = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_kvpfn"]
paragraph_spacing = -7.31
font = ExtResource("8_0tnpc")
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_vtaks"]
offsets = PackedFloat32Array(0.207792, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kvpfn"]
gradient = SubResource("Gradient_vtaks")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.513761, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vtaks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kvpfn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dinhu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kvuet"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_trtic"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ir15t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ca42v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rysoc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ssvqc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_264po"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1kice"]

[sub_resource type="LabelSettings" id="LabelSettings_vtaks"]
font_color = Color(0.74978, 0.74978, 0.74978, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtaks"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvpfn"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 90, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_dinhu"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 180, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvuet"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 270, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_trtic"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 360, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir15t"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 450, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca42v"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 540, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_rysoc"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 630, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssvqc"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 630, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_264po"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 540, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kice"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 450, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_5newe"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 360, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_37s47"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 270, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt5mj"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 180, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1j6l"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 90, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl11u"]
atlas = ExtResource("6_p57ef")
region = Rect2(0, 0, 160, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_5newe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtaks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvpfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dinhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvuet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trtic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir15t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca42v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rysoc")
}],
"loop": false,
"name": &"lower",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssvqc")
}, {
"duration": 1.7,
"texture": SubResource("AtlasTexture_264po")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_1kice")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_5newe")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_37s47")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_bt5mj")
}, {
"duration": 1.3,
"texture": SubResource("AtlasTexture_e1j6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl11u")
}],
"loop": false,
"name": &"raise",
"speed": 10.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_rysoc"]
paragraph_spacing = -8.59
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Environment" id="Environment_0tnpc"]
background_mode = 3
glow_enabled = true
glow_levels/1 = 5.22
glow_levels/3 = 0.64
glow_normalized = true
glow_intensity = 3.75
glow_strength = 0.39
glow_bloom = 0.1

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_iywne")

[node name="Machine" type="Sprite2D" parent="."]
texture = ExtResource("3_p57ef")

[node name="JumpButton" parent="Machine" instance=ExtResource("4_u5sy4")]
position = Vector2(-15, 25)

[node name="DashButton" parent="Machine" instance=ExtResource("4_u5sy4")]
position = Vector2(-3, 30)

[node name="Joystick" type="Sprite2D" parent="Machine"]
z_index = 1
position = Vector2(-36, 29)
texture = ExtResource("5_gee14")
offset = Vector2(0, -10)

[node name="JoystickBlack" type="Sprite2D" parent="Machine"]
modulate = Color(0, 0, 0, 1)
z_index = 1
position = Vector2(-36, 30)
scale = Vector2(1, 0.5)
texture = SubResource("PlaceholderTexture2D_0tnpc")

[node name="Sounds" type="Node2D" parent="Machine"]

[node name="ButtonPress" type="AudioStreamPlayer2D" parent="Machine/Sounds"]
position = Vector2(-10.1, 27.9)
stream = ExtResource("6_rysoc")
volume_db = -41.523

[node name="JoystickHit" type="AudioStreamPlayer2D" parent="Machine/Sounds"]
position = Vector2(-37.541, 26.98)
stream = ExtResource("7_ssvqc")
volume_db = -46.503
panning_strength = 1.22

[node name="CoinPwing" type="AudioStreamPlayer2D" parent="Machine/Sounds"]
stream = ExtResource("8_ssvqc")
volume_db = -33.765
pitch_scale = 1.13

[node name="RoomNoise" type="AudioStreamPlayer" parent="Machine/Sounds"]
stream = ExtResource("8_264po")
volume_db = -36.141
autoplay = true

[node name="GameMusic" type="AudioStreamPlayer" parent="Machine/Sounds"]
stream = ExtResource("9_1kice")
volume_db = -33.498

[node name="VictoryTheme" type="AudioStreamPlayer" parent="Machine/Sounds"]
stream = ExtResource("10_5newe")
volume_db = -27.291

[node name="ArcadeAmbience" type="AudioStreamPlayer" parent="Machine/Sounds"]
stream = ExtResource("11_37s47")
volume_db = -25.98
autoplay = true

[node name="CoinPickup" type="AudioStreamPlayer" parent="Machine/Sounds"]
stream = ExtResource("12_bt5mj")
volume_db = -19.914

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = -80
limit_top = -45
limit_right = 80
limit_bottom = 45
metadata/_edit_lock_ = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_0tnpc")
use_parent_material = true
clip_contents = true
offset_left = -43.0
offset_top = -29.0
offset_right = 47.0
offset_bottom = 16.0
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
size = Vector2i(90, 45)
render_target_update_mode = 4

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport"]
offset_left = -39410.0
offset_top = -18850.0
offset_right = 45731.0
offset_bottom = 21082.0
mouse_filter = 2
color = Color(0.07718, 0.0629, 0.17, 1)

[node name="GameScoreLabel" type="Label" parent="."]
visible = false
offset_left = -40.0
offset_top = -32.0
offset_right = -24.0
offset_bottom = -19.0
text = "0000"
label_settings = SubResource("LabelSettings_0tnpc")

[node name="MultiplierLabel" type="Label" parent="."]
visible = false
offset_left = -40.0
offset_top = -25.0
offset_right = -26.0
offset_bottom = -12.0
text = "x1.0"
label_settings = SubResource("LabelSettings_0tnpc")

[node name="HighScoreLabel" type="Label" parent="."]
offset_left = -17.0
offset_top = -32.0
offset_right = 45.0
offset_bottom = -19.0
text = "HIGH SCORE 9998"
label_settings = SubResource("LabelSettings_0tnpc")

[node name="InsertLabel" type="Label" parent="."]
visible = false
offset_left = -42.0
offset_top = -16.0
offset_right = 42.0
offset_bottom = 10.0
text = "INSERT COINS"
label_settings = SubResource("LabelSettings_0tnpc")
horizontal_alignment = 1

[node name="ReadyLabel" type="Label" parent="."]
visible = false
offset_left = -42.0
offset_top = -16.0
offset_right = 42.0
offset_bottom = 10.0
text = "MOVE TO START"
label_settings = SubResource("LabelSettings_0tnpc")
horizontal_alignment = 1

[node name="Shaders" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_vtaks")
offset_left = -43.0
offset_top = -29.0
offset_right = 47.0
offset_bottom = 16.0
pivot_offset = Vector2(-44, 6)
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="PickNumLabel" type="Label" parent="."]
visible = false
offset_left = -17.0
offset_top = -26.0
offset_right = 18.0
text = "PICK 2"
label_settings = SubResource("LabelSettings_kvpfn")
horizontal_alignment = 1

[node name="Darken" type="Sprite2D" parent="PickNumLabel"]
show_behind_parent = true
position = Vector2(17, 25)
scale = Vector2(1.79688, 1)
texture = SubResource("GradientTexture2D_kvpfn")

[node name="PocketArrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(60, 32)
texture = ExtResource("8_vtaks")

[node name="PocketLabel" type="Label" parent="."]
visible = false
offset_left = 43.0
offset_top = 3.0
offset_right = 78.0
offset_bottom = 29.0
text = "CHECK
POCKET"
label_settings = SubResource("LabelSettings_kvpfn")
horizontal_alignment = 1

[node name="PocketButton" type="Button" parent="."]
visible = false
offset_left = 46.0
offset_top = 6.0
offset_right = 73.0
offset_bottom = 42.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vtaks")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_kvpfn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dinhu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_kvuet")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_trtic")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ir15t")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ca42v")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rysoc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ssvqc")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_264po")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1kice")
disabled = true
flat = true

[node name="TimerLabel" type="Label" parent="."]
visible = false
offset_left = 65.0
offset_top = -25.0
offset_right = 79.0
offset_bottom = -12.0
text = "1:00"
label_settings = SubResource("LabelSettings_vtaks")
horizontal_alignment = 2

[node name="Sign" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5newe")
animation = &"lower"
frame = 7
frame_progress = 1.0
metadata/_edit_lock_ = true

[node name="RestartLabel" type="Label" parent="."]
offset_left = -100.0
offset_top = -66.0
offset_right = -9.0
offset_bottom = -45.0
text = "PRESS AGAIN
TO RESTART"
label_settings = SubResource("LabelSettings_rysoc")
horizontal_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0tnpc")

[node name="Coin" parent="." instance=ExtResource("9_0tnpc")]
position = Vector2(10, 24)
animation = &"on_table"

[node name="Coin6" parent="." instance=ExtResource("9_0tnpc")]
position = Vector2(42, 26)
animation = &"on_table"

[node name="Coin5" parent="." instance=ExtResource("9_0tnpc")]
position = Vector2(30, 28)
animation = &"on_table"

[node name="Coin4" parent="." instance=ExtResource("9_0tnpc")]
position = Vector2(33, 22)
animation = &"on_table"

[node name="Coin3" parent="." instance=ExtResource("9_0tnpc")]
position = Vector2(21, 21)
animation = &"on_table"

[node name="Coin2" parent="." instance=ExtResource("9_0tnpc")]
position = Vector2(19, 27)
animation = &"on_table"

[connection signal="pressed" from="PocketButton" to="." method="_on_pocket_button_pressed"]
[connection signal="animation_finished" from="Sign" to="." method="_on_sign_animation_finished"]
